--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "path": "^0.12.7",
     "sequelize": "^6.28.0",
     "sqlite3": "^5.1.4"
+  },
+  "devDependencies": {
+    "webpack": "^5.75.0"
   }
 }
