--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "moongose": "^1.0.0",
+    "path": "^0.12.7",
     "sequelize": "^6.28.0",
     "sequelize-cli": "^6.6.0",
     "session": "^0.1.0",
